# DEBACL

./: .gitignore  MASTER_PLAN.md  README.md  config.example.toml  pyproject.toml
examples/: README.md  demo.sh
src/debacl/api/: __init__.py  app.py
src/debacl/cli/: __init__.py  main.py
src/debacl/collectors/: base.py  crowdstrike.py  entra.py  exceptions.py  intune.py  jamf.py  mock_data.py  okta.py  vpn_log.py
src/debacl/config/: __init__.py  settings.py
src/debacl/correlation/: __init__.py  engine.py  scoring.py  windowing.py
src/debacl/models/: __init__.py  events.py  findings.py  telemetry.py
src/debacl/output/: __init__.py  exporters.py
src/debacl/storage/: __init__.py  database.py  repository.py  tables.py
tests/: test_api.py  test_cli.py  test_collectors_base.py  test_collectors_crowdstrike.py  test_collectors_entra.py  test_collectors_intune.py  test_collectors_jamf.py  test_collectors_okta.py  test_collectors_vpn_log.py  test_config.py  test_correlation_engine.py  test_correlation_scoring.py  test_correlation_windowing.py  test_e2e.py  test_exceptions.py  test_mock_data.py  test_models.py  test_output_exporters.py  test_storage.py
tests/fixtures/: vpn_sample.csv  vpn_sample_syslog.txt
